--- a/styles/small.css
+++ b/styles/small.css
@@ -213,3 +213,68 @@ footer .container h1 {
     width: 80px;
     justify-content: space-between;
 }
+
+
+.burger div{
+    width: 25px;
+    height: 3px;
+    margin: 5px;
+    background-color: #F1F1F1;
+    transition: all 0.5s ease;
+}
+
+@media (max-width: 767px) {
+    body {
+        overflow-x: hidden;
+    }
+    .links {
+        position: absolute;
+        right: 0px;
+        height: calc(100vh - 50px);
+        top: 50px;
+        background-color: #4E4E4E;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    }
+    .links a {
+        opacity: 0;
+    }
+
+    .burger {
+        display: block;
+        cursor: pointer;
+ 
+    }
+}
+
+.nav-active {
+    transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    } 
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+.toggle .line1{
+    transform: rotate(-45deg) translate(-5px,6px);
+
+}
+.toggle .line2{
+    opacity: 0;
+}
+.toggle .line3{
+    transform: rotate(45deg) translate(-5px,-6px);
+
+    
+}
